settings wrap bug fix for monaco

--- a/static/css/game.css
+++ b/static/css/game.css
@@ -65,7 +65,7 @@
     }
 }
 
-@media screen and (max-width:400px)  {
+@media screen and (max-width:420px)  {
     .normSettings *, .adminSettings *{
         font-size: large;
     }
